--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h1><span class="name_hero">My </span>Website</h1>
         
             <h3>Professional Web Developer</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum sed laborum architecto iusto quisquam incidunt.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum sed laborum architecto iusto quisquam incidunt..</p>
         </div>
         <div class="half-width">
             <img src="images/profile1.png" alt="profile_image">
