--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         
             <h3>Professional Web Developer</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum sed laborum architecto iusto quisquam incidunt..</p>
+            <a class="btn" target="_blank" href="https://github.com/Albub-Yusuf">Find Me</a>
         </div>
         <div class="half-width">
             <img src="images/profile1.png" alt="profile_image">
