dream section added

--- a/index.html
+++ b/index.html
@@ -25,6 +25,18 @@
         </div>
     </section>
 
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/profile1.png" alt="dream_image">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h3>Become a  fullstack web Develoer</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt adipisci expedita delectus? Fugiat, sit tempora...</p>
+            <a class="btn" target="_blank" href="#">Download My Resumme</a>
+        </div>
+    </section>
+
 
 </body>
 </html>
