--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <h2>Dream Big</h2>
             <h3>Become a  fullstack web Develoer</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt adipisci expedita delectus? Fugiat, sit tempora...</p>
-            <a class="btn" target="_blank" href="#">Download My Resumme</a>
+            <a class="btn" target="_blank" href="#">Download My Resume</a>
         </div>
     </section>
 
